[project]
name = "usst-e-fees"
version = "0.1.0"
description = "USST dorm electricity fees watcher and notifier"
readme = "README.md"
authors = [
    { name = "Nitmi", email = "0@123778.xyz" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.24.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["usst", "dorm", "electricity", "fees", "cli", "notification"]

[project.urls]
Homepage = "https://github.com/Nitmi/usst-e-fees"
Repository = "https://github.com/Nitmi/usst-e-fees"
Issues = "https://github.com/Nitmi/usst-e-fees/issues"

[project.scripts]
usst-e-fees = "usst_e_fees.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
